force-app/main/default/objects/Request_More_Information_Notes__c/Request_More_Information_Notes__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used for quote approvals. It part of our Request for information function built within the approval flows</description>
    <label>Request More Information Notes</label>
    <nameField>
        <displayFormat>RMI-{0000000}</displayFormat>
        <label>Request More Information Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request More Information Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>