force-app/main/default/objects/Request_More_Information_Notes__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approval</label>
    <referenceTo>sbaa__Approval__c</referenceTo>
    <relationshipLabel>Request More Information Notes</relationshipLabel>
    <relationshipName>MoreInfoNotes</relationshipName>
    <type>Lookup</type>
</CustomField>