force-app/main/default/objects/Request_More_Information_Notes__c/fields/Deal_Desk_Case__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Desk Case</label>
    <referenceTo>Deal_Desk_Case__c</referenceTo>
    <relationshipLabel>Request More Information Notes</relationshipLabel>
    <relationshipName>Request_More_Information_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>