force-app/main/default/objects/Request_More_Information_Notes__c/fields/Feed_Id__c.field-meta.xml
<CustomField>
    <fullName>Feed_Id__c</fullName>
    <description>Created to keep a track of chatter post related to each information record</description>
    <label>Feed Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>