force-app/main/default/objects/Request_More_Information_Notes__c/fields/Feedback_Group_Comments__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Group_Comments__c</fullName>
    <label>Feedback Group Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>