force-app/main/default/objects/Request_More_Information_Notes__c/fields/Feedback_Groups__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Groups__c</fullName>
    <label>Feedback Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Operations</fullName>
            </value>
            <value>
                <fullName>Deal Structuring</fullName>
            </value>
            <value>
                <fullName>Deal Desk Leadership</fullName>
            </value>
            <value>
                <fullName>Sales (to opportunity owner)</fullName>
            </value>
            <value>
                <fullName>Sales Manager (to opportunity owner’s manager)</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>