force-app/main/default/objects/Request_More_Information_Notes__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_More_Information_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>