force-app/main/default/objects/Request_More_Information_Notes__c/fields/Requestor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Comments__c</fullName>
    <label>Requestor Comments</label>
    <length>38000</length>
    <type>LongTextArea</type>
</CustomField>