force-app/main/default/objects/Request_More_Information_Notes__c/validationRules/Only_Owners_can_edit_comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owners_can_edit_comments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISCHANGED(Feedback_Groups__c) , ISCHANGED( Requestor_Comments__c )) , $User.Id  &lt;&gt;  OwnerId )</errorConditionFormula>
    <errorMessage>Only the requestor is allowed to edit the Feedback Groups or Requestor Comments!</errorMessage>
</ValidationRule>